default bet is now 10 for color contrast, chiphiding div made taller for two chips, fixed double down and 21 issues, commented undecided hands

--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -359,8 +359,8 @@ button:focus {
 .chipHiding {
   background: rgb(0, 0, 0);
   width: 59px;
-  height: 24px;
-  top: -26px;
+  height: 27px;
+  top: -29px;
   position: absolute;
   left: 452px;
   z-index: 300;
